--- a/metadata.yaml
+++ b/metadata.yaml
@@ -40,5 +40,6 @@ subjects:
 - !lcsh 'Victoria, Queen of Great Britain, 1819-1901'
 - !lcsh 'Queens -- Great Britain -- Biography'
 - !lcsh 'Great Britain -- History -- Victoria, 1837-1901'
+- GITenberg
 title: Queen Victoria
 url: http://www.gutenberg.org/ebooks/37153
